# platformer_game

./: CMakeLists.txt  Makefile  readme.md  readme.txt  tiles.h  tileworld.h
savefiles/: default.lvl  savefile.lvl
src/: animation.h  editor.cpp  item.cpp  item.h  main.cpp  monster.cpp  monster.h  player.cpp  player.h  player_states.cpp  player_states.h  skeleton.cpp  skeleton.h  skeleton_states.cpp  skeleton_states.h  skeleton_strategy.cpp  skeleton_strategy.h  tiles.h  tileworld.h
